Add new use case and finish auth config
