# Java/Integration Test Lab/infrastructure-api-rest/src/main/java/io/github/javialc/java/labs/mapper/AuthMapper.java
@@ -1,8 +1,10 @@
 package io.github.javialc.java.labs.mapper;
 
 import io.github.javialc.java.labs.api.model.LoginDto;
+import io.github.javialc.java.labs.api.model.LoginResponseDto;
 import io.github.javialc.java.labs.api.model.UserRequestDto;
 import io.github.javialc.java.labs.domain.model.LoginRequest;
+import io.github.javialc.java.labs.domain.model.LoginResponse;
 import io.github.javialc.java.labs.domain.model.UserRequest;
 import org.mapstruct.Mapper;
 
@@ -10,5 +12,9 @@ import org.mapstruct.Mapper;
 public interface AuthMapper {
     LoginRequest toLoginRequest(LoginDto loginDto);
 
+    LoginResponseDto toLoginResponseDto(LoginResponse loginResponse);
+
     UserRequest toUserRequest(UserRequestDto userRequestDto);
+
+
 }
